<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".fragments.MainMenuFragment"
    >

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="Loading Data!"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:visibility="gone" />
    <Button
        android:id="@+id/ingredients_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingredients" />

    <Button
        android:id="@+id/recipes_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recipes" />

    <Button
        android:id="@+id/meal_plans_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Meal Plans"
        android:enabled="false"/>

    <Button
        android:id="@+id/shopping_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Shopping List"
        android:enabled="false"/>
</LinearLayout>
