...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/MP_back_button"
        app:backgroundTint="@android:color/white"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
...
