...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipeListFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        app:backgroundTint="@android:color/white"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
...
